--- a/Vintorez ISG Reanimation and Remodel/gamedata/configs/mod_system_zzzzz_3dss_vintorez_isg.ltx
+++ b/Vintorez ISG Reanimation and Remodel/gamedata/configs/mod_system_zzzzz_3dss_vintorez_isg.ltx
@@ -234,3 +234,26 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_pos_16x9      = -0.0978, -0.05924, -0.004694
         aim_hud_offset_alt_rot           = 0.006198, 0.023399, 0.75
         aim_hud_offset_alt_rot_16x9      = 0.006198, 0.023399, 0.75		
+
+;----------------------------------------------------------------------------------------		
+[wpn_vintorez_isg_gee36]:wpn_vintorez_isg
+hud                                      = wpn_vintorez_isg_gee36_hud
+
+1icon_layer				= gee36
+1icon_layer_x			= 90
+1icon_layer_y			= -26
+
+inv_weight              = 4.65
+zoom_rotate_time        = 0.25
+use_alt_aim_hud         = true
+
+scope_status            = 1
+scope_zoom_factor       = 40
+scope_dynamic_zoom      = off
+
+[wpn_vintorez_isg_gee36_hud]:wpn_vintorez_isg_hud
+item_visual                              = dynamics\weapons\wpn_vintorez_isg\wpn_vintorez_isg_gee36_hud.ogf	
+        aim_hud_offset_pos               = -0.05964, 0.019566, -0.069196
+        aim_hud_offset_pos_16x9          = -0.05964, 0.019566, -0.069196
+        aim_hud_offset_rot               = 0.013782, 0.010993, -0.123
+        aim_hud_offset_rot_16x9          = 0.013782, 0.010993, -0.123		
